--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ a {
   margin: 0 auto;
 
   background-color: #ffffff;
-  box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
 .button {
@@ -67,9 +68,9 @@ a {
 }
 
 .button:active {
-  color: rgba(255, 255, 255, 0.3);;
+  color: rgba(255, 255, 255, 0.3);
 
-  background-color: #5496bd;
+  background-color: #5496bd;;
 }
 
 .main-body {
@@ -79,6 +80,8 @@ a {
 .main-navigation {
   position: relative;
 
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 
   font-weight: 700;
@@ -104,18 +107,25 @@ a {
 }
 
 .site-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   flex-grow: 1;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
   list-style: none;
   text-align: left;
+
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  -ms-flex-wrap: wrap;
 }
 
 .site-navigation__item {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 25%;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -204,20 +214,25 @@ a {
 }
 
 .features-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
   list-style: none;
 
   background-color: #eeeeee;
+
+  -ms-flex-wrap: wrap;
 }
 
 .features-list__item {
   position: relative;
 
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 33.33%;
   padding-top: 45px;
   padding-right: 5%;
@@ -230,6 +245,8 @@ a {
 }
 
 .features-list__item_blue {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
 
@@ -241,7 +258,8 @@ a {
 }
 
 .features-list__column_text {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding-top: 45px;
   padding-right: 4%;
   padding-bottom: 60px;
@@ -269,8 +287,9 @@ a {
   position: relative;
 
   display: inline-block;
-  vertical-align: baseline;
   margin-bottom: 20px;
+
+  vertical-align: baseline;
 }
 
 .features-list__number:before {
@@ -311,7 +330,10 @@ a {
 }
 
 .features-list__column_order {
+  -ms-flex-order: -1;
   order: -1;
+
+  -webkit-box-ordinal-group: 0;
 }
 
 .features-list__item_size_m {
@@ -405,7 +427,8 @@ a {
 }
 
 .reservation__button-search {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 570px;
   padding: 30px;
 
@@ -426,13 +449,15 @@ a {
   left: 50%;
   z-index: 10;
 
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 570px;
   margin-left: -285px;
   padding: 55px;
 
   background-color: #ffffff;
-  box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
+  -webkit-box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
+          box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
 }
 
 .modal-form__fieldset {
@@ -443,36 +468,68 @@ a {
 }
 
 .modal-form__column {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: justify;
+  -ms-flex-align: center;
+  -ms-flex-pack: justify;
+  -ms-flex-wrap: wrap;
 }
 
 .modal-form__column-guests {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 55px;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: justify;
+  -ms-flex-align: center;
+  -ms-flex-pack: justify;
+  -ms-flex-wrap: wrap;
 }
 
 .modal-form__column-adult {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 230px;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: justify;
+  -ms-flex-align: center;
+  -ms-flex-pack: justify;
 }
 
 .modal-form__column-children {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 180px;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: justify;
+  -ms-flex-align: center;
+  -ms-flex-pack: justify;
 }
 
 .modal-form__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 
   font-weight: 700;
@@ -481,6 +538,8 @@ a {
 }
 
 .modal-form__input {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -511,7 +570,8 @@ a {
 }
 
 .modal-form__field {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 100%;
   min-height: 38px;
   padding: 6px 13px;
@@ -533,8 +593,9 @@ a {
 }
 
 .modal-form__field:focus {
-  background-color: #ffffff;;
-  box-shadow: inset 0 0 0 2px #e5e5e5;
+  background-color: #ffffff;
+  -webkit-box-shadow: inset 0 0 0 2px #e5e5e5;
+          box-shadow: inset 0 0 0 2px #e5e5e5;;;
 }
 
 .modal-form__field::-webkit-input-placeholder {
@@ -678,10 +739,15 @@ a {
 }
 
 .main-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   align-items: center;
   padding-top: 35px;
   padding-bottom: 35px;
+
+  -webkit-box-align: center;
+  -ms-flex-align: center;
 }
 
 .main-map__image {
@@ -693,13 +759,19 @@ a {
   bottom: 0;
 
   background-color: rgba(255, 255, 255, 0.9);
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .main-footer__column {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-content: center;
   width: 33.33%;
+
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
 }
 
 .main-footer__hashtag {
@@ -712,21 +784,33 @@ a {
 }
 
 .main-footer__social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-content: center;
   margin: 0;
   padding: 0;
 
   list-style: none;
+
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
 }
 
 .social-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 46px;
   height: 48px;
   margin-right: 6px;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
 }
 
 .social-button:active .social-button-color {
@@ -738,11 +822,18 @@ a {
 }
 
 .main-footer__copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 197px;
   margin: 0;
+
+  -webkit-box-align: center;
+  -webkit-box-pack: justify;
+  -ms-flex-align: center;
+  -ms-flex-pack: justify;
 }
 
 .main-footer__copyright-text {
@@ -799,8 +890,12 @@ a {
 }
 
 .search-hotels__columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
+
+  -ms-flex-wrap: wrap;
 }
 
 .search-hotels__column {
@@ -825,8 +920,11 @@ a {
 }
 
 .search-hotels__column-controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin-bottom: 20px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -897,7 +995,8 @@ a {
   position: absolute;
   top: -9px;
 
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   width: 4px;
   height: 4px;
   padding: 0;
@@ -906,7 +1005,8 @@ a {
   border: none;
   border: 8px solid #ffffff;
   border-radius: 50%;
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 
@@ -1003,12 +1103,16 @@ input:focus + .search-hotels__form-text:before {
 }
 
 .found-hotels__column-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-top: 25px;
   padding-right: 70px;
   padding-bottom: 20px;
   padding-left: 70px;
+
+  -ms-flex-wrap: wrap;
 }
 
 .found-hotels__results-text {
@@ -1028,6 +1132,9 @@ input:focus + .search-hotels__form-text:before {
 
   font-size: 12px;
   line-height: 18px;
+
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
 }
 
 .found-hotels__fieldset {
@@ -1038,13 +1145,21 @@ input:focus + .search-hotels__form-text:before {
 }
 
 .found-hotels__sorting-columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
+
+  -ms-flex-wrap: wrap;
 }
 
 .found-hotels__sorting-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
+
+  -ms-flex-wrap: wrap;
 }
 
 .found-hotels__sorting-column_icon {
@@ -1085,6 +1200,9 @@ input:focus + .found-hotels__icon {
 .found-hotels__sorting-column_type {
   justify-content: space-between;
   width: 240px;
+
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
 }
 
 .found-hotels__title {
@@ -1140,9 +1258,12 @@ input:focus + .found-hotels__icon {
 .found-hotels-list__item {
   position: relative;
 
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  box-sizing: border-box;
+      flex-wrap: wrap;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   min-height: 150px;
   padding-top: 25px;
   padding-right: 70px;
@@ -1150,10 +1271,13 @@ input:focus + .found-hotels__icon {
   padding-left: 70px;
 
   border-bottom: 1px solid #e5e5e5;
+
+  -ms-flex-wrap: wrap;
 }
 
 .found-hotels-list__box-image {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 135px;
   margin: 0;
   margin-top: 5px;
@@ -1175,10 +1299,10 @@ input:focus + .found-hotels__icon {
   display: inline-block;
   margin-bottom: 8px;
 
-  vertical-align: baseline;
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
+  vertical-align: baseline;
   color: #000000;
 }
 
@@ -1192,6 +1316,8 @@ input:focus + .found-hotels__icon {
 }
 
 .found-hotels-list__desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -1243,6 +1369,8 @@ input:focus + .found-hotels__icon {
   color: #666666;
 
   background-color: #f2f2f2;
+
+  -ms-flex-item-align: end;
 }
 
 .found-hotels-list__rating::before {
